// Copyright (C) 2023  Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.


// The purpose of this fragment test is to test for an issue found in the generated
// client for `google/api/servicemanagement/v1` where the version of a generated
// dependency (google.protobuf.type) at runtime differs from the version used during
// generation. See https://github.com/googleapis/gapic-generator-python/issues/1748.

syntax = "proto3";

package google.fragment;

import "google/api/annotations.proto";
import "google/api/client.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/type.proto";

service MyServiceWithProtobufType {
  option (google.api.default_host) = "my.example.com";

  rpc MyMethod(MethodRequestWithProtobufType)
      returns (MethodResponseWithProtobufType) {
    option (google.api.http) = {
      post: "/v1/services/{service_name}/configs"
      body: "test_message"
    };
    option (google.api.method_signature) = "service_name,test_message";
  }
}

message MethodRequestWithProtobufType {
  string service_name = 1 [(google.api.field_behavior) = REQUIRED];
  TestMessage test_message = 2 [(google.api.field_behavior) = REQUIRED];
}

message TestMessage {
  repeated google.protobuf.Type types = 2 [(google.api.field_behavior) = REQUIRED];
}

message MethodResponseWithProtobufType {
  google.protobuf.Value result = 1;
}
